revisando el ejercicio 4

--- a/CP#9.tex
+++ b/CP#9.tex
@@ -220,6 +220,23 @@ Para que X y Y sean independientes tiene que cumplirse:
     P \left(X \le x , Y \le y\right) =  \sum_{x_i \le x}^{} \sum_{y_j \le y}^{}  P \left(X = x_i , Y = y_i\right)
 \end{equation*}
 
+\begin{center}
+    \begin{tabular}{|c|l|l|l|l|}
+        \hline
+        $F\left(x,y\right)$ & 4 &  6 & 8 & 10 
+        \\
+        \hline
+        0 & 0 &  0.1 & 0.3 & 0.4
+        \\
+        \hline
+        1 & 0 &  0.1 & 0.3 & 0.6
+        \\
+        \hline
+        2 & 0.2 &  0.4 & 0.6 & 1
+        \\
+        \hline
+    \end{tabular}
+\end{center}
 
 
 \subsection*{2 -c) Determinar la varianza de Y}
@@ -429,6 +446,27 @@ Entonces luego :
     \end{array}
 \end{equation*}
 
+\begin{flushleft}
+    Entonces la funci\'on de distribuci\'on es : 
+\end{flushleft}
+
+\begin{equation*}
+    F\left(Y\right) = \begin{cases}
+        0           & \mbox{si   $y < 0 $}
+        \\
+        \\
+        \displaystyle \frac{24}{81} & \mbox{   si   $0\leq y < 1$}
+        \\
+        \\
+        \displaystyle \frac{60}{81} & \mbox{   si   $1\leq y < 2$}
+        \\
+        \\
+        \displaystyle \frac{78}{81} & \mbox{   si   $2\leq y < 3$}
+        \\
+        \\
+        1           & \mbox{     si   $y \geq 3$}
+    \end{cases}
+\end{equation*}
 
 \subsection*{ 3-b ) Determinar el valor esperado de $ X|Y = 1$.}
 
@@ -484,6 +522,35 @@ Por lo tanto :
 
 \subsection*{3-c) Determinar la funci\'on de distribuci\'on $ X | Y > 0.$}
 
+    \begin{equation*}
+        \fbox{$
+        \displaystyle P(X|Y>0)=\frac{P(X=a_i,Y>0)}{P(Y>0)}
+        $}
+    \end{equation*}
+  
+    \begin{center}
+        \renewcommand{\arraystretch}{1.5}
+        \begin{tabular}{|c|c|c|c|c|}
+            \hline
+            $x$ & 0 & 1 & 2& 3\\ \hline
+            $X|Y>0$ & $\frac{20}{57}$ & $\frac{26}{57}$ & $\frac{10}{57}$ & $\frac{1}{57}$\\ \hline
+        \end{tabular}
+    \end{center}
+    
+
+    \begin{flushleft}
+        Entonces la funcion de distribuci\'on me queda : 
+    \end{flushleft}
+
+    \begin{center}
+        \renewcommand{\arraystretch}{1.5}
+        \begin{tabular}{|c|c|c|c|c|c|}
+                \hline
+                $x$ & $x<0$ & $0\leq x < 1$ & $1 \leq x< 2$ & $2 \leq x<3$& $x \geq 3$\\ \hline
+                $F_{X|Y>0}(x)$ & 0 & $\frac{20}{57}$ & $\frac{46}{57}$ & $\frac{56}{57}$ & 1\\
+                \hline
+        \end{tabular}
+    \end{center}
 
 \subsection*{3-d) Determinar si $X$ y $Y$ son independientes}
 
@@ -692,10 +759,10 @@ Luego chequeamos que se cumple (1) para todo valor admisible de las varaibles $X
 
 \begin{equation*}
     \begin{array}{rcl}
-        EX & = & \displaystyle 0 \left(\frac{1}{8}\right) + 1 \left(\frac{3}{8}\right) + 2 \left(\frac{1}{8}\right)
+        EX & = & \displaystyle 0 \left(\frac{1}{8}\right) + 1 \left(\frac{3}{8}\right) + 2 \left(\frac{3}{8}\right) + 3 \left(\frac{1}{8}\right)
         \\
         \\
-        EX & = & \displaystyle \frac{3}{4}
+        EX & = & \displaystyle \frac{3}{2}
     \end{array}
 \end{equation*}
 
@@ -772,11 +839,41 @@ Luego chequeamos que se cumple (1) para todo valor admisible de las varaibles $X
 \end{equation*}
 
 \begin{flushleft}
-    Nos queda entonces que la desviaci\'on estandar o tipica para las varaibles $X$ y $Y$
+    Nos queda entonces que la desviaci\'on estandar o tipica para las variables $X$ y $Y$
     es la misma :
 \end{flushleft}
 
 \begin{equation*}
     \displaystyle \sigma \left(X \right) = \sigma\left(Y\right)  = \frac{\sqrt{3}}{2}
 \end{equation*}
+
+\subsection*{4-c) Determinar la covarianza y el coeficiente de correlaci\'on }
+
+    \begin{equation*}
+        \begin{array}{rcl}
+            E\left[XY\right]& = & \displaystyle \sum_{j=i}^{\infty}\sum_{i=1}^{\infty}g(b_j,a_i)P(Y=b_j,X=a_i)
+            \\
+            \\
+            & = &\displaystyle \sum_{j=i}^{\infty}\sum_{i=1}^{\infty}b_ja_iP(Y=b_j,X=a_i)
+            \\
+            \\
+            &=& \displaystyle \frac{18}{8}
+        \end{array}
+    \end{equation*}
+    
+    \begin{flushleft}
+        La covarianza es : 
+    \end{flushleft}
+    \begin{equation*}
+        Cov(X,Y)=E[XY]-EXEY=\frac{18}{8}-\frac{9}{4}=0
+    \end{equation*}
+   
+    \begin{flushleft}
+        Y el coeficiente de correlaci\'on  es : 
+    \end{flushleft}
+
+    \begin{equation*}
+        \rho=\frac{Cov(X,Y)}{\sqrt{V(X)V(Y)}}=\frac{0}{\sqrt{\left(\frac{3}{4}\right)^2}}=0
+    \end{equation*}
+    
 \end{document}
