anadiendo el grupo

--- a/CP#9.tex
+++ b/CP#9.tex
@@ -4,8 +4,7 @@
 
 \begin{document}
 \title{Respuesta de la Clase Pr\'actica 9}
-\author{Daniel De La Cruz Prieto}
-\date{\today}
+\author{Daniel De La Cruz Prieto c-211}
 
 \maketitle
 
